2011-05-19   Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Fixed a bug in the LDPC decoder, that occurs
	in the special case of a lonely variable node (i.e. a variable
	node that is connected to only one check node) in the LDPC
	decoder. The incoming C->V message was missing in the outgoing LLR
	value. This special case is very rare but apparently occurs for
	some codes in the DVB-T2 standard.  We thank Gorka Agujeta and
	Daniel Ansorregui for pointing out this error.

2011-05-05  Bogdan Cristea  <cristeab@users.sourceforge.net>

        * itpp/comm/convcode.cpp, tests/convcode_test.cpp,
	  tests/convcode_test.ref:
	  fixed bug ID 3297666. Thanks Stephan Ludwig for providing the patch

2011-04-13  Bogdan Cristea  <cristeab@users.sourceforge.net>

	* itpp/base/operators.h, tests/Makefile.am,
	  tests/operators_test.cpp, tests/operators_test.ref: corrected bug
	  with ID 3180562

2011-02-27  Bogdan Cristea  <cristeab@users.sourceforge.net>

	* itpp/comm/stc.cpp, itpp/comm/stc.h, tests/stc_test.cpp,
	  tests/stc_test.ref: changed STC interface, added error checking
	  using it_assert()

2011-02-21  Bogdan Cristea  <cristeab@users.sourceforge.net>

	* itpp/comm/stc.cpp, itpp/comm/stc.h, tests/stc_test.cpp: added
	  more error checking on input parameters

2011-02-20  Bogdan Cristea  <cristeab@users.sourceforge.net>

	* tests/stc_test.cpp, win32/itpp_acml_tests/itpp_acml_tests.sln,
	  win32/itpp_mkl.sln, win32/itpp_mkl_tests/itpp_mkl_tests.sln:
	  added tests for Visual Studio projects, corrected minor error in
	  stc_test.cpp

2011-02-20  Bogdan Cristea  <cristeab@users.sourceforge.net>

	* itpp/comm/stc.cpp, itpp/comm/stc.h, tests/Makefile.am,
	  tests/stc_test.cpp, tests/stc_test.ref: Corrected error in STC
	  class when generating V-BLAST code. Simplified STC interface.
	  Added test file for STC class.

2011-02-17  Robert Orzechowski  <tytusz@users.sourceforge.net>
	* itpp/comm/modulator_nd.h, itpp/comm/modulator_nd.cpp: 